@@ -1,5 +1,10 @@
 2007-03-08  Daniel Macks  <dmacks@netspace.org>
 
+	* SelfUpdate.pm, SelfUpdate/CVS.pm: Offload cvs stuff into its own
+	class
+
+2007-03-08  Daniel Macks  <dmacks@netspace.org>
+
 	* SelfUpdate/Base.pm: add system_check to public API
 	* SelfUpdate.pm, SelfUpdate/*: let each method handle its own
 	system sanity-checking; nuke &SU::need_devtools
